photo align correction

--- a/style.css
+++ b/style.css
@@ -13,4 +13,5 @@ p {
 
 #photo {
     width: 200px;
+    text-align: center;
 }
